--- a/Lab01_LWP/app/src/main/res/values-en-rUS/strings.xml
+++ b/Lab01_LWP/app/src/main/res/values-en-rUS/strings.xml
@@ -6,4 +6,8 @@
     <string name="btn_signin">Sign In</string>
     <string name="btn_register">Sing Up</string>
     <string name="btn_forgotPsswd">Recover Password</string>
+    <string name="title_activity_navigation_main">NavigationMainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">DashBoard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
