--- a/Lab01_LWP/app/src/main/res/values-pt-rBR/strings.xml
+++ b/Lab01_LWP/app/src/main/res/values-pt-rBR/strings.xml
@@ -6,4 +6,8 @@
     <string name="btn_signin">Iniciar sessão</string>
     <string name="btn_register">check-in</string>
     <string name="btn_forgotPsswd">Recuperar senha</string>
+    <string name="title_activity_navigation_main">NavegaçãoMainActivity</string>
+    <string name="title_home">Lar</string>
+    <string name="title_dashboard">Painel</string>
+    <string name="title_notifications">Notificações</string>
 </resources>
