--- a/Lab01_LWP/app/src/main/res/values/strings.xml
+++ b/Lab01_LWP/app/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="btn_signin">Iniciar Sesión</string>
     <string name="btn_register">Registrarse</string>
     <string name="btn_forgotPsswd">Recuperar Contraseña</string>
+    <string name="title_activity_navigation_main">NavegaciónActividadPrincipal</string>
+    <string name="title_home">Inicio</string>
+    <string name="title_dashboard">Pizarra</string>
+    <string name="title_notifications">Notificaciones</string>
+    <string name="title_activity_navigation_lwp">NavigationLWP</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 </resources>
