--- a/lwp_lab01/app/src/main/res/values/strings.xml
+++ b/lwp_lab01/app/src/main/res/values/strings.xml
@@ -1,11 +1,5 @@
 <resources>
-    <string name="app_name">TestForLab</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Aprende Mientras Juegas</string>
     <string name="sign_in">Iniciar Sesión</string>
 
     <string name="menu_home">Inicio</string>
@@ -20,5 +14,12 @@
     <string name="message_Credits">Pantalla de Creditos</string>
     <string name="txt_LWP">Aprende Mientras Juegas, dedicado al aprendizaje virtual!</string>
     <string name="txt_LWP_mail">learnwhileplaying@gmail.com</string>
+    <string name="navigation_drawer_open">Abrir dibujo de navegacion</string>
+    <string name="navigation_drawer_close">Cerrar dibujo de navegación</string>
+    <string name="text_INA">El INA forma, capacita y certifica a personas físicas y jurídicas, para contribuir al crecimiento personal, movilidad social, productividad y competitividad; que permita al país adaptarse a los cambios que el entorno exige</string>
+    <string name="text_MEP">El Ministerio de Educación Pública (MEP) de Costa Rica es el ministerio de gobierno encargado de administrar el sistema de educación pública del país.  Sus funciones principales son las de ejecutar planes, programas y otras determinaciones que garanticen una educación general básica, pública y gratuita, coordinar las relaciones del Poder Ejecutivo</string>
+    <string name="title_entities">Entidades Reconocedoras</string>
+    <string name="title_Credits">Creditos Correspondientes</string>
+    <string name="text_Credits">Creditos hacía quienes participaron en la creación de este proyecto. Participantes: Kenneth Piedra Vargas, William Cubero Navarro, Eduard Andrés Arias Quiros y Sebastián Alberto Mata Ortega</string>
 
 </resources>
