--- a/lwp_lab01/app/src/main/res/values-pt-rBR/strings.xml
+++ b/lwp_lab01/app/src/main/res/values-pt-rBR/strings.xml
@@ -2,6 +2,11 @@
 <resources>
     <string name="app_name">Aprende Mientras Juegas</string>
     <string name="sign_in">Entrar</string>
+    <string name="txtid">Do Utilizador</string>
+    <string name="txtpw">Contrasenha</string>
+    <string name="btn_signin">Iniciar sessão</string>
+    <string name="btn_register">Check-In</string>
+    <string name="btn_forgotPsswd">" Recuperar senha"</string>
     <string name="menu_home">Lar</string>
     <string name="menu_gallery">" Sobre nós"</string>
     <string name="menu_slideshow">" Sala de aula virtual"</string>
@@ -21,4 +26,8 @@
     <string name="title_entities">Reconhecendo entidades</string>
     <string name="title_Credits">Creditos Correspondientes</string>
     <string name="text_Credits">Créditos a quem participou da criação deste projeto. Participantes: Kenneth Piedra Vargas, William Cubero Navarro, Eduard Andrés Arias Quiros e Sebastián Alberto Mata Ortega</string>
+    <string name="about_text">A LWP é uma empresa líder em soluções de tecnologia com mais de 10 anos de experiência no mercado. Dedicamo-nos ao desenvolvimento de aplicativos móveis e sistemas web de alta qualidade para nossos clientes em todo o mundo.</string>
+    <string name="comment_hint">" Deixe um comentário"</string>
+    <string name="submit_comment_text">" Enviar comentário"</string>
+    <string name="contact_info_text">Contato: Endereço: Calle Principal #123, Ciudad Tech, Telefone: +123 456 7890, Email: info@lwp.com</string>
 </resources>
